examples/fail/boolop_not_requires_bool.hax
module Example::BoolOpNotRequiresBool;

pub sub main() -> Void {
  var Int $x = 1;
  var Bool $b = not $x;
  return;
}
